{
  "version": 4,
  "terraform_version": "0.15.3",
  "serial": 26,
  "lineage": "687d3eda-0fce-799a-6066-59edd78417bf",
  "resources": [
    {
      "module": "module.myec2module",
      "mode": "managed",
      "type": "aws_instance",
      "name": "myecpub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d5eff06f840b45e9",
            "arn": "arn:aws:ec2:us-east-1:724044775311:instance/i-0fb8d274bd03d3d5e",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fb8d274bd03d3d5e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0371b35d1afbe6b70",
            "private_dns": "ip-10-0-2-60.ec2.internal",
            "private_ip": "10.0.2.60",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f2d386414ae4c724",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-015edcbe0aa09f001",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b2bb2dd3d6dd77cd"
            ]
          },
          "dependencies": [
            "module.mymodule.aws_subnet.public_subnet",
            "module.mymodule.aws_vpc.myvpc",
            "module.mysgmodule.aws_security_group.mysg"
          ]
        }
      ]
    },
    {
      "module": "module.mymodule",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724044775311:internet-gateway/igw-0047e0759f4bfe067",
            "id": "igw-0047e0759f4bfe067",
            "owner_id": "724044775311",
            "vpc_id": "vpc-0204b9f618eab193b"
          },
          "dependencies": [
            "module.mymodule.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.mymodule",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724044775311:route-table/rtb-004a24641a5ed5200",
            "id": "rtb-004a24641a5ed5200",
            "owner_id": "724044775311",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0047e0759f4bfe067",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-0204b9f618eab193b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.mymodule.aws_internet_gateway.gw",
            "module.mymodule.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.mymodule",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0205bd7a227e19f8a",
            "route_table_id": "rtb-004a24641a5ed5200",
            "subnet_id": "subnet-015edcbe0aa09f001"
          },
          "dependencies": [
            "module.mymodule.aws_internet_gateway.gw",
            "module.mymodule.aws_route_table.rt",
            "module.mymodule.aws_subnet.public_subnet",
            "module.mymodule.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.mymodule",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724044775311:subnet/subnet-015edcbe0aa09f001",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-015edcbe0aa09f001",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "724044775311",
            "vpc_id": "vpc-0204b9f618eab193b"
          },
          "dependencies": [
            "module.mymodule.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.mymodule",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724044775311:vpc/vpc-0204b9f618eab193b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cff084db7e7c3a05",
            "default_route_table_id": "rtb-064bd56f0aa03a5b2",
            "default_security_group_id": "sg-08d3b0019d2197f23",
            "dhcp_options_id": "dopt-bd9dd3c7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0204b9f618eab193b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-064bd56f0aa03a5b2",
            "owner_id": "724044775311"
          }
        }
      ]
    },
    {
      "module": "module.mysgmodule",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724044775311:security-group/sg-0b2bb2dd3d6dd77cd",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b2bb2dd3d6dd77cd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-20210602114319180700000001",
            "name_prefix": "terraform-",
            "owner_id": "724044775311",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0204b9f618eab193b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.mymodule.aws_vpc.myvpc"
          ]
        }
      ]
    }
  ]
}